--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,22 @@ phases:
     commands:
       - npm install
 
+  pre_build:
+    commands:
+      - touch .env
+      - echo "FIRESTORE_DATABASE_URL=https://g-pharmacy-1cf87.firebaseio.com/" >> .env
+      - echo "PORT=8080" >> .env
+      - echo "MAIL_HOST=smtp.gmail.com" >> .env
+      - echo "MAIL_PORT=587" >> .env
+      - echo "MAIL_USER=elmahfoudinada17@gmail.com" >> .env
+      - echo "MAIL_PASS=kmlyjiitxuitctay" >> .env
+      - echo "MAIL_FROM=GUARDMED" >> .env
+      - echo "JWT_SECRET=meow" >> .env
+      - cd src/
+      - mkdir -p ./config/firestore
+      - aws s3 cp s3://firestoreconfig/secret.json ./config/firestore/secret.json
+      - cd ..
+
   build:
     commands:
       - npm run build
@@ -12,6 +28,7 @@ phases:
 artifacts:
   files:
     - 'dist/**/*'
-    - 'package.json'
     - 'node_modules/**/*'
+    - 'package.json'
     - 'Procfile'
+    - '.env'
